Testimonials section finished

--- a/Project-06 (Real Estate Business Website)/index.html
+++ b/Project-06 (Real Estate Business Website)/index.html
@@ -9,7 +9,7 @@
     <!-- === -->
 
     <!-- Website icon -->
-    <link rel="website icon" href="assets/images/website-icon.svg">
+    <link rel="website icon" href="assets/images/logos/website-icon.svg">
     <!-- ============ -->
 
     <!-- Fonts -->
@@ -28,7 +28,7 @@
         <!-- Header section start -->
         <header>
             <div class="container">
-                <img src="assets/images/Logo.svg" alt="Website logo">
+                <img src="assets/images/logos/Logo.svg" alt="Website logo">
                 <nav>
                     <span class="nav-links active">Home</span>
                     <span class="nav-links">About Us</span>
@@ -67,13 +67,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="hero-right">
-                    <div class="hero-image">
-                        <div class="img">
-                            <img class="image" src="assets/images/Hero-img.png" alt="">
-                            <img class="bg" src="assets/images/Abstract Design.png" alt="">
-                        </div>
-                    </div>
+                <div class="hero-right"></div>
+            </div>
+            <div class="hero-image">
+                <div class="img">
+                    <img class="image" src="assets/images/Hero-img.png" alt="">
+                    <img class="bg" src="assets/images/Abstract Design.png" alt="">
                 </div>
             </div>
         </section>
@@ -127,7 +126,7 @@
                 </div>
                 <div class="slider-cards">
                     <div class="cards">
-                        <div class="properties-card">
+                        <div class="properties-card" id="card">
                             <img src="assets/images/Properties-images/Properties-image-1.png" alt="">
                             <div class="captions">
                                 <h3 class="card-title">Seaside Serenity Villa</h3>
@@ -161,7 +160,7 @@
                                 <button class="btn solid-primary">View Property Details</button>
                             </div>
                         </div>
-                        <div class="properties-card">
+                        <div class="properties-card" id="card">
                             <img src="assets/images/Properties-images/Properties-image-2.png" alt="">
                             <div class="captions">
                                 <h3 class="card-title">Metropolitan Haven</h3>
@@ -195,7 +194,7 @@
                                 <button class="btn solid-primary">View Property Details</button>
                             </div>
                         </div>
-                        <div class="properties-card">
+                        <div class="properties-card" id="card">
                             <img src="assets/images/Properties-images/Properties-image-3.png" alt="">
                             <div class="captions">
                                 <h3 class="card-title">Rustic Retreat Cottage</h3>
@@ -251,7 +250,142 @@
             </div>
         </section>
         <!-- Properties section end -->
-    </div>    
+
+        <!-- Testimonials section start -->
+        <section class="testimonials">
+            <div class="container">
+                <div class="content">
+                    <h1 class="title">What Our Clients Say</h1>
+                    <div class="box">
+                        <p class="paragraph">Read the success stories and heartfelt testimonials from our valued clients. Discover why they chose Estatein for their real estate needs.</p>
+                        <button class="btn solid-dark">View All Testimonials</button>
+                    </div>
+                    <span>
+                        <img src="assets/icons/Stars-icon.svg" alt="">
+                    </span>
+                </div>
+                <div class="slider-cards">
+                    <div class="cards">
+                        <div class="testimonials-card" id="card">
+                            <div class="stars">
+                                <span class="star">
+                                    <img src="assets/icons/yellow-star-icon.svg" alt="">
+                                </span>
+                                <span class="star">
+                                    <img src="assets/icons/yellow-star-icon.svg" alt="">
+                                </span>
+                                <span class="star">
+                                    <img src="assets/icons/yellow-star-icon.svg" alt="">
+                                </span>
+                                <span class="star">
+                                    <img src="assets/icons/yellow-star-icon.svg" alt="">
+                                </span>
+                                <span class="star">
+                                    <img src="assets/icons/yellow-star-icon.svg" alt="">
+                                </span>
+                            </div>
+                            <div class="captions">
+                                <h1 class="card-title">Exceptional Service!</h1>
+                                <p class="paragraph">Our experience with Estatein was outstanding. Their team's dedication and professionalism made finding our dream home a breeze. Highly recommended!</p>
+                            </div>
+                            <div class="user-details">
+                                <span class="user-image">
+                                    <img src="assets/images/Users/User-1.png" alt="">
+                                </span>
+                                <div class="user-info">
+                                    <span class="user-name">Wade Warren</span>
+                                    <span class="user-location paragraph">USA, California</span>
+                                </div>
+                            </div>  
+                        </div>
+                        <div class="testimonials-card" id="card">
+                            <div class="stars">
+                                <span class="star">
+                                    <img src="assets/icons/yellow-star-icon.svg" alt="">
+                                </span>
+                                <span class="star">
+                                    <img src="assets/icons/yellow-star-icon.svg" alt="">
+                                </span>
+                                <span class="star">
+                                    <img src="assets/icons/yellow-star-icon.svg" alt="">
+                                </span>
+                                <span class="star">
+                                    <img src="assets/icons/yellow-star-icon.svg" alt="">
+                                </span>
+                                <span class="star">
+                                    <img src="assets/icons/yellow-star-icon.svg" alt="">
+                                </span>
+                            </div>
+                            <div class="captions">
+                                <h1 class="card-title">Efficient and Reliable</h1>
+                                <p class="paragraph">Estatein provided us with top-notch service. They helped us sell our property quickly and at a great price. We couldn't be happier with the results.</p>
+                            </div>
+                            <div class="user-details">
+                                <span class="user-image">
+                                    <img src="assets/images/Users/User-2.png" alt="">
+                                </span>
+                                <div class="user-info">
+                                    <span class="user-name">Emelie Thomson</span>
+                                    <span class="user-location paragraph">USA, Florida</span>
+                                </div>
+                            </div>  
+                        </div>
+                        <div class="testimonials-card" id="card">
+                            <div class="stars">
+                                <span class="star">
+                                    <img src="assets/icons/yellow-star-icon.svg" alt="">
+                                </span>
+                                <span class="star">
+                                    <img src="assets/icons/yellow-star-icon.svg" alt="">
+                                </span>
+                                <span class="star">
+                                    <img src="assets/icons/yellow-star-icon.svg" alt="">
+                                </span>
+                                <span class="star">
+                                    <img src="assets/icons/yellow-star-icon.svg" alt="">
+                                </span>
+                                <span class="star">
+                                    <img src="assets/icons/yellow-star-icon.svg" alt="">
+                                </span>
+                            </div>
+                            <div class="captions">
+                                <h1 class="card-title">Trusted Advisors</h1>
+                                <p class="paragraph">The Estatein team guided us through the entire buying process. Their knowledge and commitment to our needs were impressive. Thank you for your support!</p>
+                            </div>
+                            <div class="user-details">
+                                <span class="user-image">
+                                    <img src="assets/images/Users/User-3.png" alt="">
+
+                                </span>
+                                <div class="user-info">
+                                    <span class="user-name">John Mans</span>
+                                    <span class="user-location paragraph">USA, Nevada</span>
+                                </div>
+                            </div>  
+                        </div>
+                    </div>
+                    <div class="slider-btns">
+                        <p class="card-number">
+                            <span class="current-number">01</span>
+                            <span class="txt">
+                                of
+                                <span class="count">60</span>
+                            </span>
+                        </p>
+                        <div class="btns">
+                            <div class="btn-prev">
+                                <img src="assets/icons/prev-icon.svg" alt="">
+                            </div>
+                            <div class="btn-next active">
+                                <img src="assets/icons/next-icon.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Testimonials section end -->
+    </div>   
     <!-- Home page end -->
 </body>
 </html>
