FAQ section finished

--- a/Project-06 (Real Estate Business Website)/index.html
+++ b/Project-06 (Real Estate Business Website)/index.html
@@ -385,6 +385,65 @@
             </div>
         </section>
         <!-- Testimonials section end -->
+
+        <!-- FAQ section start -->
+        <section class="faq">
+            <div class="container">
+                <div class="content">
+                    <h1 class="title">Frequently Asked Questions</h1>
+                    <div class="box">
+                        <p class="paragraph">Find answers to common questions about Estatein's services, property listings, and the real estate process. We're here to provide clarity and assist you every step of the way.</p>
+                        <button class="btn solid-dark">View All FAQ's</button>
+                    </div>
+                    <span>
+                        <img src="assets/icons/Stars-icon.svg" alt="">
+                    </span>
+                </div>
+                <div class="slider-cards">
+                    <div class="cards">
+                        <div class="faq-card" id="card">
+                            <h1 class="card-title">How do I search for properties on Estatein?</h1>
+                            <p class="paragraph">Learn how to use our user-friendly search tools to find properties that match your criteria.</p>
+                            <div>
+                                <button class="btn solid-dark">Read More</button>
+                            </div>
+                        </div>
+                        <div class="faq-card" id="card">
+                            <h1 class="card-title">What documents do I need to sell my property through Estatein?</h1>
+                            <p class="paragraph">Find out about the necessary documentation for listing your property with us.</p>
+                            <div>
+                                <button class="btn solid-dark">Read More</button>
+                            </div>
+                        </div>
+                        <div class="faq-card" id="card">
+                            <h1 class="card-title">How can I contact an Estatein agent? <br><br></h1>
+                            <p class="paragraph">Discover the different ways you can get in touch with our experienced agents.</p>
+                            <div>
+                                <button class="btn solid-dark">Read More</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider-btns">
+                        <p class="card-number">
+                            <span class="current-number">01</span>
+                            <span class="txt">
+                                of
+                                <span class="count">60</span>
+                            </span>
+                        </p>
+                        <div class="btns">
+                            <div class="btn-prev">
+                                <img src="assets/icons/prev-icon.svg" alt="">
+                            </div>
+                            <div class="btn-next active">
+                                <img src="assets/icons/next-icon.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- FAQ section end -->
     </div>   
     <!-- Home page end -->
 </body>
