CTA section finished

--- a/Project-06 (Real Estate Business Website)/index.html
+++ b/Project-06 (Real Estate Business Website)/index.html
@@ -444,6 +444,20 @@
             </div>
         </section>
         <!-- FAQ section end -->
+
+        <!-- CTA section start -->
+        <section class="cta">
+            <img class="left" src="assets/images/left-bg.png" alt="">
+            <img class="right" src="assets/images/right-bg.png" alt="">
+            <div class="container">
+                <div class="content">
+                    <h1 class="title">Start Your Real Estate Journey Today</h1>
+                    <p class="paragraph">Your dream property is just a click away. Whether you're looking for a new home, a strategic investment, or expert real estate advice, Estatein is here to assist you every step of the way. Take the first step towards your real estate goals and explore our available properties or get in touch with our team for personalized assistance.</p>
+                </div>
+                <button class="btn solid-primary">Explore Properties</button>
+            </div>
+        </section>
+        <!-- CTA section end -->
     </div>   
     <!-- Home page end -->
 </body>
