FOOTER section finished

--- a/Project-06 (Real Estate Business Website)/index.html
+++ b/Project-06 (Real Estate Business Website)/index.html
@@ -41,7 +41,7 @@
         <!-- Header section end -->
     
         <!-- Hero section start -->
-        <section class="hero">
+        <section class="hero" id="hero">
             <div class="container">
                 <div class="hero-left">
                     <div class="contents">
@@ -79,7 +79,7 @@
         <!-- Hero section end -->
 
         <!-- Services card section start -->
-        <section class="services-card">
+        <section class="services-card" id="featured">
             <div class="service-card">
                 <img class="card-icon" src="assets/icons/home-icon.svg" alt="Home icon">
                 <span>Find Your Dream Home</span>
@@ -112,7 +112,7 @@
         <!-- Services card section end -->
 
         <!-- Properties section start -->
-        <section class="properties">
+        <section class="properties" id="properties">
             <div class="container">
                 <div class="content">
                     <h1 class="title">Featured Properties</h1>
@@ -252,7 +252,7 @@
         <!-- Properties section end -->
 
         <!-- Testimonials section start -->
-        <section class="testimonials">
+        <section class="testimonials" id="testimonials">
             <div class="container">
                 <div class="content">
                     <h1 class="title">What Our Clients Say</h1>
@@ -369,7 +369,7 @@
                             <span class="current-number">01</span>
                             <span class="txt">
                                 of
-                                <span class="count">60</span>
+                                <span class="count">10</span>
                             </span>
                         </p>
                         <div class="btns">
@@ -387,7 +387,7 @@
         <!-- Testimonials section end -->
 
         <!-- FAQ section start -->
-        <section class="faq">
+        <section class="faq" id="faqs">
             <div class="container">
                 <div class="content">
                     <h1 class="title">Frequently Asked Questions</h1>
@@ -428,7 +428,7 @@
                             <span class="current-number">01</span>
                             <span class="txt">
                                 of
-                                <span class="count">60</span>
+                                <span class="count">10</span>
                             </span>
                         </p>
                         <div class="btns">
@@ -458,6 +458,91 @@
             </div>
         </section>
         <!-- CTA section end -->
+
+        <!-- Footer section start -->
+        <footer>
+            <div class="footer">
+                <div class="container">
+                    <div class="left">
+                        <img class="logo" src="assets/images/logos/Logo.svg" alt="">
+                        <label for="">
+                            <img class="left-icon" src="assets/icons/email-icon.svg" alt="">
+                            <input type="email" placeholder="Enter your email" name="email">
+                            <img class="right-icon" src="assets/icons/send-icon.svg" alt="">
+                        </label>
+                    </div>
+                    <div class="right">
+                        <div class="sitemap">
+                            <p class="paragraph page-name">Home</p>
+                            <div class="sitemap-links">
+                                <a href="#hero" class="paragraph">Hero section</a>
+                                <a href="#features" class="paragraph">Features</a>
+                                <a href="#properties" class="paragraph">Properties</a>
+                                <a href="#testimonials" class="paragraph">Testimonials</a>
+                                <a href="#faqs" class="paragraph">FAQ'</a>
+                            </div>
+                        </div>
+                        <div class="sitemap">
+                            <p class="paragraph page-name">About Us</p>
+                            <div class="sitemap-links">
+                                <a href="" class="paragraph">Our Story</a>
+                                <a href="" class="paragraph">Our Works</a>
+                                <a href="" class="paragraph">How It Works</a>
+                                <a href="" class="paragraph">Our Team</a>
+                                <a href="" class="paragraph">Our Clients</a>
+                            </div>
+                        </div>
+                        <div class="sitemap">
+                            <p class="paragraph page-name">Properties</p>
+                            <div class="sitemap-links">
+                                <a href="" class="paragraph">Portfolio</a>
+                                <a href="" class="paragraph">Categories</a>
+                            </div>
+                        </div>
+                        <div class="sitemap">
+                            <p class="paragraph page-name">Services</p>
+                            <div class="sitemap-links">
+                                <a href="" class="paragraph">Valuation Mastery</a>
+                                <a href="" class="paragraph">Strategic Marketing</a>
+                                <a href="" class="paragraph">Negotiation Wizardry</a>
+                                <a href="" class="paragraph">Closing Success</a>
+                                <a href="" class="paragraph">Property Management</a>
+                            </div>
+                        </div>
+                        <div class="sitemap">
+                            <p class="paragraph page-name">Contact Us</p>
+                            <div class="sitemap-links">
+                                <a href="" class="paragraph">Contact Form</a>
+                                <a href="" class="paragraph">Our Offices</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="end">
+                <div class="container">
+                    <div class="left">
+                        <p class="paragraph">@2023 Estatein. All Rights Reserved.</p>
+                        <p class="paragraph">Terms & Conditions</p>
+                    </div>
+                    <div class="right">
+                        <div class="social-icon">
+                            <img src="assets/icons/facebook-icon.svg" alt="">
+                        </div>
+                        <div class="social-icon">
+                            <img src="assets/icons/linkedin-icon.svg" alt="">
+                        </div>
+                        <div class="social-icon">
+                            <img src="assets/icons/twiter-icon.svg" alt="">
+                        </div>
+                        <div class="social-icon">
+                            <img src="assets/icons/youtube-icon.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- Footer section end -->
     </div>   
     <!-- Home page end -->
 </body>
