Footer section update

--- a/Project-06 (Real Estate Business Website)/index.html
+++ b/Project-06 (Real Estate Business Website)/index.html
@@ -79,7 +79,7 @@
         <!-- Hero section end -->
 
         <!-- Services card section start -->
-        <section class="services-card" id="featured">
+        <section class="services-card" id="features">
             <div class="service-card">
                 <img class="card-icon" src="assets/icons/home-icon.svg" alt="Home icon">
                 <span>Find Your Dream Home</span>
