Properties section stared

--- a/Project-06 (Real Estate Business Website)/index.html
+++ b/Project-06 (Real Estate Business Website)/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <!-- Home page start -->
-    <div class="pages active" id="home">
+    <div class="pages" id="home">
         <!-- Header section start -->
         <header></header>
         <!-- Header section end -->
@@ -795,6 +795,25 @@
         <!-- Footer section end -->
     </div>
     <!-- About page end -->
+
+    <!-- Properties page start -->
+    <div class="pages active" id="properties">
+        <!-- Header section start -->
+        <header></header>
+        <!-- Header section end -->
+    
+        <!-- Navigation bar section start -->
+        <section class="navigation-bar">
+            <div class="container">
+                <div class="content">
+                    <h1 class="title">Find Your Dream Property</h1>
+                    <p class="paragraph">Welcome to Estatein, where your dream property awaits in every corner of our beautiful world. Explore our curated selection of properties, each offering a unique story and a chance to redefine your life. With categories to suit every dreamer, your journey </p>
+                </div>
+            </div>
+        </section>
+        <!-- Navigation bar section end -->
+    </div>
+    <!-- Properties page end -->
 
     <!-- Javascript codes -->
     <script src="assets/scripts/elementsContents.js"></script>
