Our clients section started

--- a/Project-05 (Travlog)/index.html
+++ b/Project-05 (Travlog)/index.html
@@ -48,7 +48,7 @@
     <!-- Header section end -->
 
     <!-- Home section start -->
-    <div class="home">
+    <section class="home">
         <div class="container">
             <div class="left">
                 <div>
@@ -71,11 +71,21 @@
                 <img src="assets/images/home page image.png" alt="">
             </div>
         </div>
-    </div>
+    </section>
     <!-- Home section end -->
 
     <!-- Our clients section start -->
-    
+    <section class="our-clients">
+        <div class="container">
+            <div class="clients">
+                <img src="assets/images/Tripadvisor-logo.svg" alt="">
+                <img src="assets/images/Expedia-logo.svg" alt="">
+                <img src="assets/images/Booking-logo.svg" alt="">
+                <img src="assets/images/Airbnb-logo.svg" alt="">
+                <img src="assets/images/Orbitz-logo.svg" alt="">
+            </div>
+        </div>
+    </section>
     <!-- Our clients section end -->
 </body>
 </html>
